<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_mocking_utils</name>
  <version>0.0.0</version>
  <description>C and C++ mocking utilities for ros 2 tests.</description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <maintainer email="jjperez@ekumenlabs.com">Jorge Perez</maintainer>
  <license>Apache License 2.0</license>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="jjperez@ekumenlabs.com">Jorge Perez</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>mimick_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
